# inf2978

./: .gitignore  achlioptas.py  bw_distance.py  bw_number_gen.py  bw_readers.py  bw_serialization.py  bwdistance.py  bwmath.py  bwnumbergen.py  bwprojection.py  bwreaders.py  bwruns.py  bwsvd.py  main.py  main_copy.py  matUtils.py  preprocessdata.sh  randomprojection.py  read.py  readers.py  svd_docs.py  svddocsprojection.py  test_docword_file.txt  vocab.nytimes.txt
SVD/: cur.py  cur_gen.py  run.py  svd.py
cpp/: vs2013.bat
cpp/src/: CMakeLists.txt  dataprojection.cpp  dataprojection.h.in  distance.cpp  distance.h  matrix.h  randomgen.cpp  randomgen.h  reader.cpp  reader.h
report/: 1024_v1_achiloptas.txt  1024_v1_randomproj.txt  1024_v2_achiloptas.txt  16_JL.txt  16_v1_achiloptas.txt  16_v1_randomproj.txt  16_v2_achiloptas.txt  16_v2_randomproj.txt  256_JL.txt  256_v1_achiloptas.txt  256_v1_randomproj.txt  256_v2_achiloptas.txt  256_v2_randomproj.txt  4_JL.txt  4_v1_achiloptas.txt  4_v1_randomproj.txt  4_v2_achiloptas.txt  4_v2_randomproj.txt  64_JL.txt  64_v1_achiloptas.txt  64_v1_randomproj.txt  64_v2_achiloptas.txt  64_v2_randomproj.txt  report com numpy.xlsx
t2/: #runtest.sh  #win_runtest.sh  class_test.py  data_set_test.py  dataset_test.py  gitignore  ground2.py  ground3.py  ground_truth.py  ground_truth200k.p  ground_truth_4.p  ground_truth_amostragem.p  ground_truth_seq.py  ground_trutw.p  llsh.py  lminhash.py  lsh_test.py  lshingle.py  ltest.py  mp_data_set_test.py  mp_lshingle.py  plots.R  resfile.csv  runtest.sh  shingle.py  single_test.py  stextutils.py  (+1 more)
(+4945 files in other folders)
